Use APIs the Codename One runtime actually has
The demos module's bytecode compliance check found four violations, and
both samples were teaching something an app cannot call.

java.io.CharArrayReader is not in the runtime; Codename One ships its own
com.codename1.io.CharArrayReader, which is what the CSV sample means.

Map.of and List.of are Java 9 factories, so no Codename One app can build
its JSON tree that way. Construct the map and list with HashMap and
Arrays.asList, both of which CLDC11 and vm/JavaAPI define.

Verified by compiling every io snippet with -bootclasspath set to the
java-runtime jar the compliance mojo itself uses as its allowed index: no
API is missing from the runtime. The residual errors under that probe are
Java 8 language rules (static members of inner classes) that the module's
own Java 17 build accepts, and they fire on pre-existing snippets too.